# cocktail_api

./: .env  Cargo.toml
src/: db.rs  main.rs
src/common/: mod.rs
src/common/dtos/: create_user_dto.rs
src/common/enums/: ingredient_db_measure_units.rs  language_code.rs  measure_unit.rs  mod.rs  unit_of_measure_liquids.rs  unit_of_measure_solids.rs
src/common/utils/: mod.rs
src/database_scripts/: insert_cocktail_magarita.sql  insert_cocktail_tequila_sunrise.sql  insert_measure_unit_translations.sql  insert_measure_units.sql
src/database_scripts/cocktail_inserts/: insert_cocktail_magarita.sql  insert_cocktail_tequila_sunrise.sql
src/db_backup/: postgres_localhost-2026_02_11_19_19_40-dump.sql
src/models/: cocktail.rs  cocktail_ingredient_model.rs  cocktail_model.rs  create_user_dto.rs  ingredient_model.rs  measure_unit_model.rs  mod.rs  user.rs  user_model.rs
src/routes/: cocktail_controller.rs  mod.rs  user.rs  user_controller.rs
src/services/: cocktail_service.rs  mod.rs  user_service.rs
