[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-native-tls", "macros", "chrono"] }
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4.39", features = ["serde"] }