[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-native-tls", "macros", "chrono"] }
dotenv = "0.15"
chrono = { version = "0.4.39", features = ["serde"] }
log = "0.4.25"
env_logger = "0.11.6"